# Noteece

./: .gitignore  ARCHITECTURE.md  AUDIT_ROADMAP.md  BUILD.md  BUILD_ISSUES.md  CHANGELOG.md  CICD_STATUS.md  CODEOWNERS  CODE_REVIEW_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  EXPORTING.md  FINAL_DELIVERY_SUMMARY.md  FINAL_PROJECT_COMPLETION_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SESSION.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  INSTALLATION_SCRIPTS.md  ISSUES.md  LEGAL_REVIEW_CHECKLIST.md  LICENSE  LICENSE_REVIEW.md  LINT_ANALYSIS.md  LINT_MASTER_SUMMARY.md  LINT_QUICK_REFERENCE.md  LINT_WARNINGS_DETAILED_MAP.txt  NEXT_STEPS.md  NEXT_STEPS_SESSION2.md  NEXT_STEPS_SESSION3.md  Noteece.txt  PEERFEEDBACK_FIXES_APPLIED.md  PHASE_4_DELIVERY_SUMMARY.md  PLAN.md  PRIVACY.md  PROGRESS.md  PROJECT_COMPLETE.md  (+28 more)
.github/workflows/: build-binaries.yml  build.yml  ci.yml  release.yml
apps/desktop/: .eslintignore  .eslintrc  .eslintrc.cjs  .prettierignore  README.md  index.html  jest.config.cjs  jest.polyfill.ts  jest.setup.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/desktop/__mocks__/: logger.ts  tauri-plugin-store-api.ts
apps/desktop/coverage/: clover.xml  coverage-final.json  lcov.info
apps/desktop/src/: App.tsx  global.css  main.tsx  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/js/extractors/: README.md  VALIDATION-CHECKLIST.md  bumble.js  castbox.js  discord.js  fotmob.js  gmail.js  hinge.js  instagram.js  linkedin.js  pinterest.js  reddit.js  sofascore.js  spotify.js  telegram.js  tiktok.js  tinder.js  twitter.js  universal.js  youtube.js
apps/desktop/src-tauri/src/: commands.rs  concurrency_tests.rs  config.rs  db_pool.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: ai.rs  analytics.rs  auth.rs  backup.rs  caldav.rs  collaboration.rs  foresight.rs  form.rs  import.rs  mod.rs  mode.rs  note.rs  ocr.rs  personal_modes.rs  project.rs  search.rs  social.rs  space.rs  srs.rs  sync.rs  tag.rs  task.rs  temporal_graph.rs  time_tracking.rs  vault.rs  weekly_review.rs
apps/mobile/: .env.example  .eslintrc.js  APP_STORE.md  ASSETS.md  DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  SENTRY_SETUP.md  TESTING.md  app.json  babel.config.js  eas.json  jest.config.js  jest.pre-setup.js  jest.setup.js  package-lock.json  package.json  sync-client-test-result.json  tsconfig.json
apps/mobile/android/app/src/main/cpp/: CMakeLists.txt  NoteeceCore.cpp  NoteeceCore.h  sync_jsi.cpp
assets/: logo_concepts.json
config/: social_selectors.json
docs/: CODE_QUALITY_REPORT.md  DOCUMENTATION_INDEX.md  FINAL_CLEANUP_REPORT.md  FINAL_IMPROVEMENTS_SUMMARY.md  FORESIGHT_2.0_ARCHITECTURE.md  IMPLEMENTATION-ROADMAP-2025-11-07.md  MOBILE_SYNC_ARCHITECTURE.md  SECURITY_AUDIT.md  SOCIAL_MEDIA_SUITE_FEATURE_ASSESSMENT.md  SOCIAL_SUITE_IMPLEMENTATION_COMPLETE.md  session-improvements-2025-11-07.md  social-media-suite-IMPLEMENTATION-COMPLETE.md  social-media-suite-MOBILE-ARCHITECTURE.md  social-media-suite-PLATFORM-SETUP.md  social-media-suite-SECURITY.md  social-media-suite-TROUBLESHOOTING.md  social-media-suite-USER-GUIDE.md  social-media-suite-analysis.md  social-media-suite-roadmap.md
docs/architecture/: ARCHITECTURE.md  FORESIGHT_2.0_ARCHITECTURE.md  MOBILE_SYNC_ARCHITECTURE.md  README.md
docs/archive/: SOCIALHUB_IMPLEMENTATION_GUIDE.md  social-media-suite-IMPLEMENTATION-COMPLETE.md  social-media-suite-MOBILE-ARCHITECTURE.md  social-media-suite-PLATFORM-SETUP.md  social-media-suite-SECURITY.md  social-media-suite-TROUBLESHOOTING.md  social-media-suite-USER-GUIDE.md
docs/audit_reports/: AUDIT_ROADMAP.md  EXECUTIVE_SUMMARY.md  PHASE_0_ENVIRONMENT_AND_FOUNDATION.md  PHASE_1_CORE_BACKEND_AUDIT.md  PHASE_2_FRONTEND_AUDIT.md  PHASE_3_CROSS_PLATFORM_HARMONIZATION.md  PHASE_4_REFINEMENT_AND_MODERNIZATION.md  PHASE_5_EXPANSION.md  PHASE_6_VALIDATION_AND_VERIFICATION.md  PHASE_7_DOCUMENTATION_AND_RELEASE.md
docs/development/: CODE_REVIEW_GUIDE.md  DEVELOPER_GUIDE.md  LINT_QUICK_REFERENCE.md  README.md  TESTING_STRATEGY.md  TEST_COVERAGE.md
docs/peer-feedback-assessment/: QUICK-SUMMARY.md  README.md  SOCIALHUB-COMPREHENSIVE-ASSESSMENT.md  SOCIALHUB-QUICK-SUMMARY.md  authentication-system-solution.md  binary-encryption-fix.md  comprehensive-assessment-report.md  priority-action-plan.md
docs/project/: CHANGELOG.md  ISSUES.md  PLAN.md  PROGRESS.md  STATUS.md
docs/project_docs/: 00_Home.md
docs/reports/: ARCHIVED_DEVELOPMENT_REPORTS.md  CODE_QUALITY_REPORT.md  FINAL_PROJECT_COMPLETION_REPORT.md  IMPLEMENTATION_COMPLETE_SESSION.md  IMPLEMENTATION_STATUS.md  ISSUES.md  LINT_MASTER_SUMMARY.md  PEERFEEDBACK_FIXES_APPLIED.md  PHASE_4_DELIVERY_SUMMARY.md  QA_FIXES_REPORT.md  SECURITY_FIXES_APPLIED.md
docs/security/: LEGAL_REVIEW_CHECKLIST.md  LICENSE_REVIEW.md  PRIVACY.md  README.md  SECURITY.md  SECURITY_AUDIT.md  TERMS.md
docs/user/: INSTALLATION_SCRIPTS.md  QUICK_START.md  README.md  RESTORING.md  SIMPLE_INSTALLATION_GUIDE.md  USER_GUIDE.md
docs/wiki/: 00_Home.md  Architecture.md  Development.md  Features.md  STRUCTURE.md  Security.md  UserGuide.md  WIKI.md
legal/templates/: PRIVACY.md  TERMS.md
scripts/: run-all-tests.sh  run-qa-tests.sh
verification/: verify_ui.py
(+579 files in other folders)
