[package]
name = "noteece-desktop"
version = "1.1.0"
description = "Noteece Desktop - Local-first encrypted knowledge management"
authors = ["Amirreza Farnam Taheri <taheri.farnam@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/AmirrezaFarnamTaheri/Noteece"
default-run = "noteece-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["dialog", "clipboard-all", "dialog-all", "fs-all", "global-shortcut-all", "notification-all", "os-all", "path-all", "shell-open", "window-all"] }
core-rs = { path = "../../../packages/core-rs" }
rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher-vendored-openssl"] }
ulid = { version = "1.2.1", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8"
chrono = "0.4.31"
log = "0.4.27"
hex = "0.4.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dev-dependencies]
tempfile = "3.6.0"
